--- a/app/globals.css
+++ b/app/globals.css
@@ -38,7 +38,7 @@ body {
   margin-bottom: 5px;
   box-shadow: rgb(224, 224, 224) 0px 2px 4px 0px;
 }
-.list-link {
+a {
   text-decoration: none;
   color: black;
 }
@@ -65,10 +65,25 @@ input {
   display: block;
   margin-bottom: 10px;
 }
+
+.hidden {
+  display: none;
+}
+
 button {
   padding: 10px 15px;
   background: lightgray;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+
+textarea {
+  display: block;
+  width: 400px;
+  height: 200px;
+
+  padding: 10px;
+  resize: none;
+  margin-bottom: 10px;
 }
