--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,10 @@
 .navbar {
   display: flex;
   align-items: center;
+  background: #f37e21;
 
   width: 100vw;
-  height: 40px;
+  height: 50px;
 }
 
 .navbar-link {
@@ -20,7 +21,7 @@
 
 .navbar-link:hover {
   font-weight: bold;
-  font-size: 1.1rem;
+  font-size: 1.5rem;
 }
 
 body {
@@ -31,7 +32,28 @@ body {
   background: rgb(249, 250, 255);
   padding: 10px;
 }
+
+.list-function {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 30px 0px 30px 0px;
+}
+
+.list-link {
+  background: #2196f3;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 4rem;
+}
+
+.list-link:hover {
+  background: #1769aa;
+}
+
 .list-item {
+  display: flex;
+
   background: white;
   border-radius: 10px;
   padding: 20px;
@@ -53,6 +75,18 @@ a {
 .list-item p {
   color: grey;
   margin: 5px 0px;
+}
+
+.list-item-left {
+  flex: 4;
+}
+
+.list-item-right {
+  flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .p-20 {
