chore: metadata 수정

--- a/app/globals.css
+++ b/app/globals.css
@@ -60,6 +60,9 @@ body {
   margin-bottom: 5px;
   box-shadow: rgb(224, 224, 224) 0px 2px 4px 0px;
 }
+.list-item:hover {
+  background: #eee;
+}
 a {
   text-decoration: none;
   color: black;
